fixes misaligned stuff

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,5 +1,5 @@
 div.thumbnail{
-  height: 400px;
+  height: 410px;
   background-color:whitesmoke;
 }
 
